--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="/assets/isotope/jquery.isotope.min.js"></script>
 
 </head>
-<body>
+<body class="<%= @back %>">
 
 	<%= yield %>
 
