--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -8,13 +8,28 @@
 @import "/assets/isotope/isotope.css";
 
 body {
-    background-repeat:no-repeat;
     margin: 0 auto;
+    background-color: #393C5D !important;
+    
+    background-size: auto;
+    background-position: center top;
+}
+
+body.black {
+	background-image: url("background-black.jpg");
+}
+
+body.blue {
+	background-image: url("background-blue.jpg");
+}
+
+body.gray {
+	background-image: url("background-gray.jpg");
 }
 
 input[type="text"] {
-	font-size: 2.0em;
-	color: #00c;
+	font-size: 1.2em;
+	color: #446CE9;
 	text-align: center;
 	height: 1.0em;
 }
@@ -24,7 +39,7 @@ input[type="text"] {
 }
 
 .tab-pane {
-	min-width: 500px;
+	min-width: 600px;
 }
 
 .circle-border {
@@ -126,8 +141,6 @@ input[type="text"] {
   margin-top: 0em;
 }
 
-#items-catalog-body,
-#items-catalog,
 .item-card {
   -webkit-border-radius:6px; 
   -moz-border-radius:5px; 
@@ -146,14 +159,9 @@ input[type="text"] {
   margin: 0 1% 0 1%;
 }
 
-#items-catalog {
-	background-color: #FAFAFA;
-  	border: 1px solid #CCCCCC;
-}
-
 .item-card {
-  background-color: #E3E3E3;
-  border: 1px solid #B3B3B3;
+  background-color: #59A7F7;
+  border: 1px solid #428EDD;
   padding: 0.5em;
   margin: 0.5em;
   width: 13.3em;
@@ -222,8 +230,7 @@ input[type="text"] {
 .planning-selecter-body,
 .planning-submit-body {
 	text-align: center;
-	background-color: #E3E3E3;
-	border: 1px solid #B3B3B3;
+	color: #FFFFFF;
 }
 
 .planning-selecter {
@@ -257,9 +264,8 @@ input[type="text"] {
 	position: absolute;
 	width: 27%; 
 	height: 100%; 
-	background-color: #F7F7F7;
-  	border: 1px dashed #7D7D7D;
-  	opacity: 0.6;
+	background-color: #E7E7E7;
+	background-color: rgba(255, 255, 255, 0.6);
 }
 
 .workshop-all-container {
@@ -269,46 +275,54 @@ input[type="text"] {
 /*-------------------- История --------------------*/
 
 .arrow-planning {
-	position: relative;
-	float: right;
-	width: 15%;
 	height: 1.5em;
-	margin-right: -15%;
 	background-color: #C8C8C8;
-	z-index: 1;
+	border: 1px solid #8D8D8D;
 }
 
 .history-body {
 	background-color: #E3E3E3; 
 	padding: 0.5em;
+	border: 1px solid #8D8D8D;
 }
 
 .planning-history-body {
 	position: relative;
 	background-color: #E3E3E3; 
+	border: 1px solid #8D8D8D;
 	margin-bottom: 0.5em;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
 	z-index: 3;
 }
 
+.planning-history-row {
+	border-top: 1px solid #616161;
+}
+
+.planning-history-row:first-child
+{
+	border-top: 0px solid #616161;
+}
+
+
 .history-recipe-true {
-	border: 1px solid #DCDCDC;
-	background-color: #D4FFDF; 
+	border: 1px solid #42A95C; 
+	background-color: #61FF89; 
 	padding-bottom: 1em;
 }
 
 .history-recipe-false {
-	border: 1px solid #DCDCDC;
-	background-color: #FFEAEA; 
+	border: 1px solid #BA4949;
+	background-color: #FF6666; 
 	padding-bottom: 1em;
 }
 
 .history {
-	background-color: #F7F7F7; 
 	margin-bottom: 1em;
 	margin-top: 1em;
-	border: 1px solid #BDBDBD;
+	background-color: #EFEFEF;
+	background-color: rgba(255, 255, 255, 0.7);
 	padding: 5px;
 	text-align: center;
 	font-size: 12px;
@@ -342,14 +356,51 @@ input[type="text"] {
 
 /*-----------------------*/
 
-.grad-cylinder:hover > .cylinder-labels {
-	opacity: 0.8 !important;
-}
-
 .storage:hover > .storage-label {
-	opacity: 0.8 !important;
+	opacity: 1.0 !important;
 }
 
 .workshop:hover > .storage-label {
-	opacity: 0.8 !important;
+	opacity: 1.0 !important;
+}
+
+.btn-bf {
+  background-color: hsl(197, 49%, 50%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#67aeca", endColorstr="#419abd");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#67aeca), to(#419abd));
+  background-image: -moz-linear-gradient(top, #67aeca, #419abd);
+  background-image: -ms-linear-gradient(top, #67aeca, #419abd);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #67aeca), color-stop(100%, #419abd));
+  background-image: -webkit-linear-gradient(top, #67aeca, #419abd);
+  background-image: -o-linear-gradient(top, #67aeca, #419abd);
+  background-image: linear-gradient(#67aeca, #419abd);
+  border-color: #419abd #419abd hsl(197, 49%, 47.5%);
+  color: #ffffff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.39);
+  -webkit-font-smoothing: antialiased;
+  font-weight: bold;
+}
+
+.btn-menu {
+  background-color: hsl(41, 85%, 35%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#efb73d", endColorstr="#a5750d");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#efb73d), to(#a5750d));
+  background-image: -moz-linear-gradient(top, #efb73d, #a5750d);
+  background-image: -ms-linear-gradient(top, #efb73d, #a5750d);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #efb73d), color-stop(100%, #a5750d));
+  background-image: -webkit-linear-gradient(top, #efb73d, #a5750d);
+  background-image: -o-linear-gradient(top, #efb73d, #a5750d);
+  background-image: linear-gradient(#efb73d, #a5750d);
+  border-color: #a5750d #a5750d hsl(41, 85%, 29%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.39);
+  -webkit-font-smoothing: antialiased;
+}
+
+
+.settings-container {
+	background-color: #F3F3F3;
+	padding: 5px;
 }
