--- a/app/views/biz_flow/home.html.erb
+++ b/app/views/biz_flow/home.html.erb
@@ -4,14 +4,26 @@
     <div ng-repeat='(key, old) in history | filter:query' history key="{{key}}"></div>
 
     <div class="tabbable">
-        <ul class="nav nav-tabs">
-            <li class="active"><a id="planning-button" href="#tab1" data-toggle="tab">Планирование</a></li>
-            <li><a id="productionButton" href="#tab2" data-toggle="tab">Производство</a></li>
-            <li><a id="catalog-button" href="#tab3" data-toggle="tab">Справочник</a></li>
-        </ul>
+        <div style="text-align: center;">
+            <div class='btn-group' data-toggle="buttons-radio" style="display: inline-block;">
+                <button class="btn btn-menu active" id="planning-button" href="#tab1" data-toggle="tab">Планирование</button>
+                <button class="btn btn-menu" id="productionButton" href="#tab2" data-toggle="tab">Производство</button>
+                <button class="btn btn-menu" id="catalog-button" href="#tab3" data-toggle="tab">Справочник</button>
+                <button class="btn btn-menu" id="catalog-button" href="#tab4" data-toggle="tab">Настройки</button>
+            </div>
+        </div>
+
+        <br><br>
+        
         <div class="tab-content tab-body">
             <div class="tab-pane active" id="tab1">
 
+                <div class='row-fluid btn-group' data-toggle="buttons-radio" style="text-align: center;">
+                    <button class="btn btn-bf btn-large" type="button" ng-repeat='recipe in recipes' ng-click="setPlanningRecipeName(recipe.name)">{{recipe.name}}</button>
+                </div>
+
+                <br><br><br>
+               
                 <div class="store-workshop-container">
                     <div class="store-all-container circle-border">
                         <span>Склад</span>
@@ -31,72 +43,38 @@
                     </div>
                 </div>
 
-                <div class="planning-selecter">
-                    <div class="planning-selecter-body circle-border">
-                        <div class="recipe-submit-label">Рецепт:</div>
-                        <select ng-model='planningRecipeName' style='width: 85%'>
-                            <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="planning-submit">
-                    <div class="planning-submit-body circle-border">
-                        <div class="recipe-submit-label">Действия:</div>
-                        <div class='submit-container'>
-                            <form ng-submit="planningExecute()" style='margin-bottom: 10px;'>
-                                  <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
-                            </form>
-                        </div>
-                    </div>
+                <div class='submit-container'>
+                    <form ng-submit="planningExecute()" style='margin-bottom: 10px;'>
+                          <input class='btn btn-bf btn-large' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="planningButtonDisabled()">
+                    </form>
                 </div>
             </div>
 
             <div class="tab-pane" id="tab2">
+                <div class='row-fluid btn-group' data-toggle="buttons-radio" style="text-align: center;">
+                    <button class="btn btn-bf btn-large" type="button" ng-repeat='recipe in recipes' ng-click="setProductionRecipeName(recipe.name)">{{recipe.name}}</button>
+                </div>
+
+                <br><br><br>
+
                 <div class='row-fluid' id='productionInputs'>
-                    <div class='span12 production-items-container circle-border'>
-                        <div class='row-fluid'>
-                            <div ng-repeat='input in recipes[productionRecipeName].inputs' class='span{{inputSpanType()}}'>
-                                <div cylinder type='input' label='{{getInputName(input, productionRecipeName)}}' proportion='{{input.pct}}' having='{{input.productOnHand}}' critical='{{input.productCritical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
-                            </div>
-                        </div>
+                    <div ng-repeat='input in recipes[productionRecipeName].inputs' class='span{{inputSpanType()}}'>
+                        <div cylinder type='input' label='{{getInputName(input, productionRecipeName)}}' proportion='{{input.pct}}' having='{{input.productOnHand}}' critical='{{input.productCritical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
                     </div>
                 </div>
 
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <div class='arrow-input'></div>
-                    </div>
-                </div>
+                <br><br>
 
-                <div class='row-fluid mixer-body circle-border'>
-                    <div class='center-div'>
-                        <h2>Рецепт:</h2>
-                        <select ng-model='productionRecipeName'>
-                            <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class='row-fluid'>
-                    <div class='span12'>
-                        <div class='arrow-output'></div>
-                    </div>
-                </div>
-
-                <div class='row-fluid'>
-                    <div class='span12 production-items-container circle-border'>
-                        <div class='row-fluid'>
-                            <div ng-repeat='output in recipes[productionRecipeName].outputs' class='span{{outputSpanType()}}'>
-                                <div cylinder type='output' label='{{getOutputName(output, productionRecipeName)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
-                            </div>
-                        </div>
+                <div class='row-fluid' ng-repeat='output in recipes[productionRecipeName].outputs'>
+                    <div class="span3"></div>
+                    <div class='span6'>
+                        <div cylinder type='output' label='{{getOutputName(output, productionRecipeName)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
                     </div>
                 </div>
 
                 <div class='submit-container'>
                     <form ng-submit="productionExecute()">
-                          <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
+                          <input class='btn btn-bf btn-large' type='submit' value="{{loading && 'Загрузка...' || 'ПУСК'}}" ng-disabled="executeButtonDisabled()">
                     </form>
                 </div>
             </div>
@@ -104,16 +82,42 @@
             <div class="tab-pane" id="tab3">
                 <div id="items-catalog-container">
                     <div id="items-catalog-body">
-                        <div id="sorting">
-                            <span>Сортировать:</span> 
-                            <a class="btn disabled btn-primary" href="#item-name">Наименование</a>
-                            <a class="btn" href="#group-name">Группа</a>
-                            <a class="btn" href="#group-type">Тип группы</a>
-                            <a class="btn" href="#item-type">Тип</a>
-                            <a class="btn" href="#item-uom">Единица измерения</a>
+                        <div id="sorting" class='btn-group'>
+                            <a class="btn btn-bf" href="#item-name">Наименование</a>
+                            <a class="btn btn-bf" href="#group-name">Группа</a>
+                            <a class="btn btn-bf" href="#group-type">Тип группы</a>
+                            <a class="btn btn-bf" href="#item-type">Тип</a>
+                            <a class="btn btn-bf" href="#item-uom">Единица измерения</a>
                         </div>
+                        <br><br>
                         <div id="items-catalog">
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane" id="tab4">
+                <div class="row-fluid">
+                    <div class="span12">
+                    <div style="width: 300px; margin: 0 auto;" class="circle-border settings-container">
+                    <%= form_tag(set_background_path, :remote => true, :style => "margin-bottom: 0px;") do %>
+                        <legend>Фон</legend>
+                        <label class="radio">
+                          <%= radio_button_tag 'back', "black", @back == 'black', class: "" %> Черный
+                        </label>
+                        <label class="radio">
+                          <%= radio_button_tag 'back', "blue", @back == 'blue', class: "" %> Синий
+                        </label>
+                        <label class="radio">
+                          <%= radio_button_tag 'back', "gray", @back == 'gray', class: "" %> Серый
+                        </label>
+                        <footer class="text-right">
+                            <%= submit_tag "Сохранить", class: "btn btn-bf" %>    
+                        </footer>
+                        
+                    <% end %>
+
+                    </div>
                     </div>
                 </div>
             </div>
