--- a/app/views/biz_flow/home.html.erb
+++ b/app/views/biz_flow/home.html.erb
@@ -39,7 +39,7 @@ var bizFlowCtrl = function($scope, $http, $templateCache)
     $scope.historyLength  = 0;
     $scope.productionRecipeName = '';
     $scope.planningRecipeName   = '';
-    $scope.recipes; //= {"Шпатлевка":{"inputs":[{"critical":0,"pct":4.8,"UOM":"кг","onHand":432,"productName":"Мрам - 100"},{"critical":0,"pct":15.4,"UOM":"кг","onHand":1386,"productName":"Химик - 3М"},{"critical":0,"pct":15.9,"UOM":"кг","onHand":1431,"productName":"Загуститель ВС"},{"critical":800,"pct":63.9,"UOM":"кг","onHand":1141,"productName":"ГО-1"}],"itemType":30,"name":"Шпатлевка","outputs":[{"pct":100,"UOM":"кг","onHand":1000,"productName":"Шпатлевка"}],"productionLocation":"Цех"},"Шпат-20кг":{"inputs":[{"critical":0,"pct":1,"UOM":"шт","onHand":100,"productName":"Мешок 20кг"},{"critical":0,"pct":20,"UOM":"кг","onHand":1000,"productName":"Шпатлевка"}],"itemType":40,"name":"Шпат-20кг","outputs":[{"pct":1,"UOM":"шт","onHand":0,"productName":"Шпат-20кг"}],"productionLocation":"Цех"},"Просев":{"inputs":[{"critical":0,"pct":80,"UOM":"кг","onHand":800,"productName":"Гипс К"},{"critical":8000,"pct":20,"UOM":"кг","onHand":450,"productName":"Вяж. 1"}],"itemType":20,"name":"Просев","outputs":[{"pct":9,"UOM":"шт","productName":"ГО-2","onHand":220},{"pct":91,"UOM":"шт","productName":"ГО-1","onHand":1141}],"productionLocation":"Цех"},"Шпат-25кг":{"inputs":[{"critical":0,"pct":25,"UOM":"кг","onHand":1000,"productName":"Шпатлевка"},{"critical":0,"pct":1,"UOM":"шт","onHand":100,"productName":"Мешок 25кг"}],"itemType":40,"name":"Шпат-25кг","outputs":[{"pct":1,"UOM":"шт","onHand":0,"productName":"Шпат-25кг"}],"productionLocation":"Цех"},"Шпат-10кг":{"inputs":[{"critical":0,"pct":10,"UOM":"кг","onHand":1000,"productName":"Шпатлевка"},{"critical":0,"pct":1,"UOM":"шт","onHand":100,"productName":"Мешок 10кг"}],"itemType":40,"name":"Шпат-10кг","outputs":[{"pct":1,"UOM":"шт","onHand":0,"productName":"Шпат-10кг"}],"productionLocation":"Цех"},"Шпат-5кг":{"inputs":[{"critical":0,"pct":1,"UOM":"шт","onHand":100,"productName":"Мешок 5кг"},{"critical":0,"pct":5,"UOM":"кг","onHand":1000,"productName":"Шпатлевка"}],"itemType":40,"name":"Шпат-5кг","outputs":[{"pct":1,"UOM":"шт","onHand":0,"productName":"Шпат-5кг"}],"productionLocation":"Цех"}};
+    $scope.recipes;
     $scope.catalogIsSorted = false;
 
     init();
@@ -365,6 +365,10 @@ var bizFlowCtrl = function($scope, $http, $templateCache)
     $scope.setPlanningRecipeName = function(name) {
         $scope.planningRecipeName = name;
     };
+
+    $scope.exit = function() {
+        window.location.replace('<%= @host %>');
+    };
 };
 
 bizflow.controller("bizFlowCtrl", bizFlowCtrl);
@@ -493,7 +497,8 @@ function HistoryDirective($compile)
                 <button class="btn btn-menu active" id="planning-button" href="#tab1" data-toggle="tab">Планирование</button>
                 <button class="btn btn-menu" id="productionButton" href="#tab2" data-toggle="tab">Производство</button>
                 <button class="btn btn-menu" id="catalog-button" href="#tab3" data-toggle="tab">Справочник</button>
-                <button class="btn btn-menu" id="catalog-button" href="#tab4" data-toggle="tab">Настройки</button>
+                <button class="btn btn-menu" id="serrings-button" href="#tab4" data-toggle="tab">Настройки</button>
+                <button class="btn btn-menu" ng-click="exit()">Выход</button>
             </div>
         </div>
 
